syntax = "proto3";

package v1;

message LoginRequest {
    string email = 1;
    string password = 2;
}

message LoginResponse {
    string auth_token = 1;
    string refresh_token = 2;
}

message RefreshTokenRequest {
    string refresh_token = 1;
}

message RefreshTokenResponse {
    string auth_token = 1;
    string refresh_token = 2;
}

message LogoutRequest {
    string auth_token = 1;
    string refresh_token = 2;
}

message RegisterRequest {
  string email = 1;
  string phone_number = 2;
  string gender = 3;
  string first_name = 4;
  string last_name = 5;
  string password = 6;
}

message RegisterResponse {
  string auth_token = 1;
  string refresh_token = 2;
}

message UserInfoRequest {
  string auth_token = 1;
}

message UserInfoResponse {
  string email = 1;
  string phone_number = 2;
  string gender = 3;
  string first_name = 4;
  string last_name = 5;
}

service AuthService {
  rpc Login(LoginRequest) returns (LoginResponse) {}
  rpc RefreshToken(RefreshTokenRequest) returns (RefreshTokenResponse) {}
  rpc Logout(LogoutRequest) returns (google.protobuf.Empty) {}
  rpc Register(RegisterRequest) returns (RegisterResponse) {}
  rpc UserInfo(UserInfoRequest) returns (UserInfoResponse) {}
}